# tgen

./: .env_example  Cargo.toml  README.md
engine/: Cargo.toml
engine/src/: excel.rs
engine/src/excel/: design.rs
engine/src/excel/data/: days.rs  headers.rs  total.rs
engine/src/excel/network/: holiday.rs
overwork_table/: Cargo.toml
overwork_table/src/: lib.rs
overwork_table/src/adapter/: holidays.rs  mod.rs
overwork_table/src/entities/: mod.rs
overwork_table/src/excel/: cells_filling.rs  mod.rs  styles.rs  styles_constants.rs
tabel/: Cargo.toml
tabel/src/: excel.rs  lib.rs
tabel/src/adapter/: holidays.rs
tabel/src/entities/: days.rs
tabel/src/excel/: cell_constants.rs  cells_filling.rs  data.rs  mod.rs  network.rs
tabel/src/excel/data/: days.rs
tabel/src/excel/network/: holiday.rs
telegram/: Cargo.toml
telegram/src/: main.rs
