[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive_more = { version = "2.1.1", features = ["full"] }
rust_xlsxwriter = "0.93.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
