[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
overwork_table = { path = "../overwork_table" }
anyhow.workspace = true
chrono.workspace = true
log = "0.4.29"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.49.0", features = ["full"] }
